css/master.css
/* COLOR PALETTE https://coolors.co/9c6b65-fcf7f8-f3ede9-b1a6ac-4c2b36-563841-3a1b21-1b263b
#FCF7F8; snow-white     for header/nav
#F3EDE9; isabelline     for text
#1B263B; oxford         for nav bar + footer bg
#9C6B65; copper-rose    for links
#563841; deeptaupe      content bg
#4C2B36; eggplant       content bg
#3A1B21; liver          content bg
*/



/* ==== GLOBAL STYLES ==== */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}
h1, h2, h3, h4 {
  margin: 0;
}
body, figure {
  margin: 0;
}
img {
  max-width: 100%;
}
ul li {
  padding-bottom: 5px;
}
.ul-no-bullets {
  list-style-type: none;
  padding: 0;
  margin: 0;
}


/* ==== MAIN LAYOUT & HEADER ==== */
header {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 40px;
}
header h1 {
  margin-top: 200px;
  color: #F3EDE9;
  font-family: 'Vidaloka', serif;
  font-size: 50px;
}
header h2 {
  padding-left: 90px;
  color: rgba(252, 252, 238, 0.5);
  font-family: 'Vidaloka', serif;
  font-size: 15px;
  font-weight: lighter;
  line-height: 0.5;
}


/* ==== SPLASH & PARALLAX ==== */
body {
  background: url('../imgs/splash0.png');
  background-color: #1B263B;
}
#spacer {
  height: 400px;
}
#img1 {
  background: url('../imgs/splash3.png');
}
#img2 {
  background: url('../imgs/splash5.png');
}
#img3 {
  background: url('../imgs/splash2.png');
}
#img4 {
  background: url('../imgs/splash1.png');
}
body, #img1, #img2, #img3, #img4 {
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.parallax {
  height: 500px;
}


/* ==== NAVIGATION ==== */
nav {
  position: fixed;
  top: 0;
  z-index: 1;
  width: 100%;
  background-color: #1B263B;
}
#menu ul {
  margin: 0px;
  padding: 10px;
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: repeat(4, auto);
  justify-content: center;
}
#menu ul li {
  padding: 5px;
  margin: 10px;
  text-align: center;
  list-style-type: none;
}
#menu ul li a {
  text-decoration: none;
  color: #FCF7F8;
  font-family: 'Raleway', sans-serif;
  font-weight: normal;
  font-size: 1rem;
  transition-timing-function: ease;
  transition: all 0.1s;
  transition-property: color, font-weight;
}
#menu ul li a:active {
  color: #1B263B;
  font-weight: bold;
  cursor: pointer;
}
#menu ul li a:link, a:visited {
  background-color: rgba(255, 255, 255, 0.0);
  transition-timing-function: ease;
  transition: all 0.5s;
  transition-property: background-color;
}
#menu ul li a:hover {
  background-color: #1B263B;
}

/* ==== SECTION CONTENT STYLES ==== */
h3 {
  font-family: 'Vidaloka', serif;
  color: #F3EDE9;
  font-size: 40px;
}
h4 {
  color: #DBD5D2;
}
.content, #credit-line, #sources {
  width: 100vw;
  font-family: 'Montserrat', sans-serif;
  color: #B1A6AC;
}
.content_wrapper {
  width: 80vw;
  margin: 0 auto;
  padding: 50px 0px 50px 0px;
}
section#about-section, section#portfolio-section, section#education-section {
  background-color: #3A1B21;
}
section#contact-section {
  background-color: #1B263B;
}
/* --- ABOUT SECTION --- */
#about-wrapper h3 {
  text-align: center;
}
#about-wrapper img {
  border-radius: 50%;
  width: 200px;
  max-width: 100%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 10px;
  margin-bottom: 30px;
}
/* --- PORTFOLIO SECTION --- */
#portfolio-section h3 {
  margin-bottom: 30px;
}
#portfolio-section img {
  width: 170px;
  max-width: 100%
  height: auto;
  margin-top: 40px;
  margin-bottom: 15px;
}
/* --- EDUCATION SECTION --- */
#education-section ul li {
  line-height: 1.3;
}
#education-wrapper {
  display: grid;
  grid-template-columns: auto;
}
#education-text h4 {
  margin-top: 40px;
}


/* ==== FOOTER STYLES ==== */
.footer-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
}
main a:link, a:visited, button#toggle-sources {
  text-decoration: none;
  font-weight: bold;
  color: #9C6B65;
  font-family: 'Raleway', sans-serif;
}
#links a:link, a:visited {
  margin: 30px 20px 10px 20px;
  padding: 10px 10px 10px 10px;
  font-size: 1.5rem;
}
#credit-line a:link, a:visited, #credit-line p {
  padding: 0px;
  font-size: 0.8rem;
}
button#toggle-sources {
  cursor: pointer;
  display: inline-block;
  border: none;
  background-color: rgba(255, 255, 255, 0.0);
}
#sources {
  display: none;
  width: 700px;
  margin: 0 auto;
}
#sources h4 {
  margin-left: 15px;
  margin-bottom: 15px;
}
#sources ul {
  width: 80vw;
}
#sources ul li {
  font-size: 0.8rem;
}

